company details are updated

--- a/other-products.html
+++ b/other-products.html
@@ -6,11 +6,11 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <meta charset="utf-8">
-    <title>Other Products - Ramdev Steel Industries</title>
+    <title>Other Products - KHETESHWAR ENTERPRISES</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Ramdev Steel Industries other stainless steel and decor products" name="description">
+    <meta content="KHETESHWAR ENTERPRISES other stainless steel and decor products" name="description">
 
-    <link href="img/Ramdev Steel Industries logo.jpg" rel="icon">
+    <link href="img/KElogo.png" rel="icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Playfair+Display:wght@500;600;700&display=swap"
         rel="stylesheet">
@@ -128,7 +128,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary">Ramdev Steel Industries</h1>
+            <h1 class="text-primary">KHETESHWAR ENTERPRISES</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -140,7 +140,7 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
             </div>
             <a href="index.html" class="navbar-brand bg-white py-2 px-4 mx-3 d-none d-lg-block" style="width: 280px;">
-                <img src="./img/Ramdev Steel Industries logo.jpg" class="img-fluid" alt="Ramdev Steel Industries"
+                <img src="./img/KElogo.png" class="img-fluid" alt="KHETESHWAR ENTERPRISES"
                     style="height: 58px; margin-left: 81px;">
             </a>
             <div class="navbar-nav me-auto py-0">
@@ -175,7 +175,7 @@
             <div class="row align-items-center g-4">
                 <div class="col-lg-7">
                     <h1 class="mb-3">Discover Our Other Signature Products</h1>
-                    <p class="mb-0">Explore premium furnishings and decor from Ramdev Steel Industries. Each category
+                    <p class="mb-0">Explore premium furnishings and decor from KHETESHWAR ENTERPRISES. Each category
                         below opens a dedicated page with detailed galleries and specifications.</p>
                 </div>
                 <div class="col-lg-5 text-lg-end text-center">
@@ -250,7 +250,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6">
-                    <p class="mb-0">&copy; <span class="text-primary">2025</span> Ramdev Steel Industries. All rights
+                    <p class="mb-0">&copy; <span class="text-primary">2025</span> KHETESHWAR ENTERPRISES. All rights
                         reserved.</p>
                 </div>
                 <div class="col-md-6 text-md-end text-start">
@@ -260,7 +260,7 @@
         </div>
     </footer>
 
-    <a href="javascript:void(0);" onclick="window.open('https://wa.me/919029585033', '_blank')"
+    <a href="javascript:void(0);" onclick="window.open('https://wa.me/919967202660', '_blank')"
         class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"
         style="color: white; background: green; border: 2px solid green;" title="Chat on WhatsApp">
         <i class="bi bi-whatsapp"></i>
