--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                         <p class="text-primary text-uppercase mb-2">About Us</p>
                         <h1 class="display-6 mb-4" style="font-size: 32px;">Expert Metal Fabrication & Coating You Can
                             Trust</h1>
-                        <p style="text-align: justify;">At <strong style="color: #EE2B47;">Ramdev Steel
-                                Industries</strong>, we specialize in manufacturing all kinds of S.S. Handles, Railings,
+                        <p style="text-align: justify;">At <strong style="color: #EE2B47;">KHETESHWAR ENTERPRISES
+                                </strong>, we specialize in manufacturing all kinds of S.S. Handles, Railings,
                             Safety Door Grill, and Interior Fabrication. We also provide all kinds of PVD & PU coatings
                             for metal surfaces. With years of industry experience, we have built a solid reputation for
                             delivering innovative, high-quality metalwork solutions tailored to both residential and
