--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
                     <div class="dropdown-menu simple-products-menu shadow-sm border-0 m-0">
                         <a href="ramdev-railings.html" class="dropdown-item">Stainless Steel Railings</a>
                         <a href="ramdev-grills.html" class="dropdown-item">Stainless Steel Grills</a>
+
+                        <a href="ss-profiles.html" class="dropdown-item">Stainless Steel Profiles</a>
                         <a href="ramdev-pvd-coating.html" class="dropdown-item">PVD Coating Services</a>
                         <a href="ramdev-doors.html" class="dropdown-item">Stainless Steel Doors</a>
                         <a href="ramdev-gates.html" class="dropdown-item">Stainless Steel Gates</a>
@@ -655,17 +657,17 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="service-item d-flex flex-column bg-white p-3 pb-0 h-100">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/cansole-table.jpg" alt="">
+                            <img class="img-fluid" src="img/ss-profiles/profile-1.jpg" alt="">
                             <div class="service-overlay">
-                                <a href="cansole-table.html"></a>
+                                <a href="ss-profiles.html"></a>
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h4>Console Table</h4>
+                            <h4>Stainless Steel Profile</h4>
                             <div class="d-flex justify-content-center gap-2 flex-wrap">
-                                <a href="cansole-table.html" class="btn btn-primary">Learn More </a>
+                                <a href="ss-profiles.html" class="btn btn-primary">Learn More </a>
                                 <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-2"
-                                    href="https://wa.me/919967202660?text=Hi%20I%20am%20interested%20in%20Console%20Table"
+                                    href="https://wa.me/919967202660?text=Hi%20I%20am%20interested%20in%20Stainless%20Steel%20Profile"
                                     target="_blank">
 
                                     <span
@@ -707,6 +709,11 @@
                             <button class="nav-link" id="tab-grills-tab" data-bs-toggle="pill"
                                 data-bs-target="#tab-grills" type="button" role="tab" aria-controls="tab-grills"
                                 aria-selected="false">Stainless Steel Grills</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="tab-profiles-tab" data-bs-toggle="pill"
+                                data-bs-target="#tab-profiles" type="button" role="tab" aria-controls="tab-profiles"
+                                aria-selected="false">Stainless Steel Profiles</button>
                         </li>
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" id="tab-handles-tab" data-bs-toggle="pill"
@@ -787,6 +794,22 @@
                                     <div class="text-center p-3 bg-light">
                                         <h6 class="mb-1">Stainless Steel Grill 01</h6>
                                         <small>Stainless Steel Grills</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-1.jpg"
+                                            alt="SS Profile 01">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-1.jpg" data-lightbox="all-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 01</h6>
+                                        <small>Stainless Steel Profiles</small>
                                     </div>
                                 </div>
                             </div>
@@ -1109,6 +1132,123 @@
                                     <div class="text-center p-3 bg-light">
                                         <h6 class="mb-1">Stainless Steel Grill 66</h6>
                                         <small>Custom Fabrication</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="tab-profiles" role="tabpanel" aria-labelledby="tab-profiles-tab">
+                        <div class="row g-4">
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-1.jpg"
+                                            alt="SS Profile 01">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-1.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 01</h6>
+                                        <small>Premium Quality</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-2.jpg"
+                                            alt="SS Profile 02">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-2.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 02</h6>
+                                        <small>Durable Design</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-3.jpg"
+                                            alt="SS Profile 03">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-3.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 03</h6>
+                                        <small>Modern Style</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-4.jpg"
+                                            alt="SS Profile 04">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-4.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 04</h6>
+                                        <small>Custom Finish</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-5.jpg"
+                                            alt="SS Profile 05">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-5.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 05</h6>
+                                        <small>Elegant Look</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-6.jpg"
+                                            alt="SS Profile 06">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-6.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 06</h6>
+                                        <small>Sturdy Build</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+                                <div class="product-item">
+                                    <div class="position-relative">
+                                        <img class="img-fluid w-100" src="img/ss-profiles/profile-7.jpg"
+                                            alt="SS Profile 07">
+                                        <div class="product-overlay">
+                                            <a href="img/ss-profiles/profile-7.jpg" data-lightbox="profiles-gallery"
+                                                class="btn btn-sm btn-light"><i class="fa fa-eye"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center p-3 bg-light">
+                                        <h6 class="mb-1">SS Profile 07</h6>
+                                        <small>Versatile Use</small>
                                     </div>
                                 </div>
                             </div>
@@ -2532,6 +2672,82 @@
         /*** Subscribe End ***/
     </style>
 
+    <!-- We Also Deal In Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-5 mb-4">We Also Deal In</h1>
+                <p class="mb-0">Explore our extensive range of premium stainless steel and carbon steel raw materials</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <a href="ss-tubes.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/stainless steel tubes.jpg" alt="SS Tubes" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Tubes</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
+                    <a href="carbon-steel-tubes.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/carbon steel tubes.jpg" alt="Carbon Steel Tubes" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Carbon Steel Tubes</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <a href="ss-pipes.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/stainless steel pipe.png" alt="SS Pipes" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Pipes</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <a href="ss-pipe-fittings.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/ss-pipe-fitting.jpg" alt="SS Pipe Fittings" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">SS Pipe Fittings</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="ss-sheets.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/stainless steel sheet.png" alt="SS Sheets" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Sheets</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                    <a href="ss-plates.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/ss plates.jpg" alt="SS Plates" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Plates</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <a href="ss-circles.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/stainless-steel-circle.jpg" alt="SS Circles" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Circles</h5>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <a href="ss-rods.html" class="d-block text-center text-decoration-none">
+                        <div class="bg-light rounded overflow-hidden">
+                            <img class="img-fluid" src="img/other/stainless steel rod.webp" alt="SS Rods" style="width: 100%; height: 250px; object-fit: cover;">
+                        </div>
+                        <h5 class="mt-3 text-dark">Stainless Steel Rods</h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- We Also Deal In End -->
 
     <!-- Footer Start -->
     <div class="container-fluid footer position-relative bg-dark text-white-50 mt-5 py-5 px-4 px-lg-5 wow fadeIn"
