--- a/other-products.html
+++ b/other-products.html
@@ -150,6 +150,8 @@
                     <div class="dropdown-menu simple-products-menu shadow-sm border-0 m-0">
                         <a href="ramdev-railings.html" class="dropdown-item">Stainless Steel Railings</a>
                         <a href="ramdev-grills.html" class="dropdown-item">Stainless Steel Grills</a>
+
+                        <a href="ss-profiles.html" class="dropdown-item">Stainless Steel Profiles</a>
                         <a href="ramdev-pvd-coating.html" class="dropdown-item">PVD Coating Services</a>
                         <a href="ramdev-doors.html" class="dropdown-item">Stainless Steel Doors</a>
                         <a href="ramdev-gates.html" class="dropdown-item">Stainless Steel Gates</a>
@@ -239,6 +241,62 @@
                     <a href="brass-railings.html" class="other-card">
                         <img src="img/brass-railings/brass-1.jpg" alt="Brass Railings">
                         <div class="other-card-title">Brass Railings</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-tubes.html" class="other-card">
+                        <img src="img/other/stainless steel tubes.jpg" alt="Stainless Steel Tubes">
+                        <div class="other-card-title">SS Tubes</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="carbon-steel-tubes.html" class="other-card">
+                        <img src="img/other/carbon steel tubes.jpg" alt="Carbon Steel Tubes">
+                        <div class="other-card-title">Carbon Steel Tubes</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-pipes.html" class="other-card">
+                        <img src="img/other/stainless steel pipe.png" alt="Stainless Steel Pipes">
+                        <div class="other-card-title">SS Pipes</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-pipe-fittings.html" class="other-card">
+                        <img src="img/other/ss-pipe-fitting.jpg" alt="SS Pipe Fittings">
+                        <div class="other-card-title">SS Pipe Fittings</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-sheets.html" class="other-card">
+                        <img src="img/other/stainless steel sheet.png" alt="Stainless Steel Sheets">
+                        <div class="other-card-title">SS Sheets</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-plates.html" class="other-card">
+                        <img src="img/other/ss plates.jpg" alt="Stainless Steel Plates">
+                        <div class="other-card-title">SS Plates</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-circles.html" class="other-card">
+                        <img src="img/other/stainless-steel-circle.jpg" alt="Stainless Steel Circles">
+                        <div class="other-card-title">SS Circles</div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <a href="ss-rods.html" class="other-card">
+                        <img src="img/other/stainless steel rod.webp" alt="Stainless Steel Rods">
+                        <div class="other-card-title">SS Rods</div>
                     </a>
                 </div>
             </div>
